specified z index on menu containers to prevent overlapping

--- a/public/css/ghost-login-style.css
+++ b/public/css/ghost-login-style.css
@@ -23,6 +23,7 @@ div.card-face {
     width: 100%;
     height: 100%;
     backface-visibility: hidden;
+    z-index: 0;
 }
 
 div.card-login {
